[tool.poetry]
name = "laozi"
version = "0.1.0"
description = "Serialization library outputting a human-readable format"
authors = ["David Francos Cuartero <me@davidfrancos.net>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
